# swagger.yaml
@@ -14,6 +14,8 @@ tags:
     description: "All about genres"
   - name: "user"
     description: "All about users"
+  - name: "order"
+    description: "All about order"
 schemes:
   - "https"
 paths:
@@ -611,7 +613,7 @@ paths:
     post:
       tags:
         - "user"
-      summary: "Add a new user"
+      summary: "Create user"
       description: ""
       consumes:
         - "application/json"
@@ -620,7 +622,7 @@ paths:
       parameters:
         - in: "body"
           name: "body"
-          description: "User object that needs to be added"
+          description: "Created user object"
           required: true
           schema:
             $ref: "#/definitions/User"
@@ -696,6 +698,115 @@ paths:
       responses:
         "404":
           description: "User not found"
+
+  /orders:
+    get:
+      tags:
+        - "order"
+      summary: "Show all orders"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Order"
+        "405":
+          description: "Invalid input"
+
+    post:
+      tags:
+        - "order"
+      summary: "Create order"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Created order object"
+          required: true
+          schema:
+            $ref: "#/definitions/Order"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Order"
+        "405":
+          description: "Invalid input"
+
+    put:
+      tags:
+        - "order"
+      summary: "Update a order"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Order object that needs to be updated"
+          required: true
+          schema:
+            $ref: "#/definitions/Order"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Order"
+        "405":
+          description: "Invalid input"
+
+  /orders/{orderID}:
+    get:
+      tags:
+        - "order"
+      summary: "Find order by ID"
+      description: "Returns a single order"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "orderID"
+          in: "path"
+          description: "ID of order to return"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Order"
+        "404":
+          description: "Order not found"
+
+    delete:
+      tags:
+        - "order"
+      summary: "Delete a order"
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - name: "orderID"
+          in: "path"
+          description: "Order id to delete"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "404":
+          description: "Order not found"
 
 definitions:
   Book:
@@ -793,6 +904,28 @@ definitions:
       role:
         type: "string"
         format: "byte"
+
+  Order:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      createdBy:
+        type: "string"
+        format: "byte"
+      books:
+        type: "array"
+        items:
+          $ref: "#/definitions/Book"
+      status:
+        type: "string"
+        description: "Order Status"
+        enum:
+          - "created"
+          - "process"
+          - "finished"
+          - "cancelled"
 
 externalDocs:
   description: "Find out more about Swagger"
